--- a/styles/bio.css
+++ b/styles/bio.css
@@ -151,6 +151,11 @@
   background-repeat: no-repeat;
   margin: 0rem;
   height: 300px;
+}
+.hero__layer {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(50, 50, 50, 0.5);
   display: flex;
   align-items: center;
 }
