--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -8,7 +8,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0rem;
-    height: 300px;
+    height: 250px;
 
     &__layer{
         width: 100%;
@@ -16,11 +16,57 @@
         background-color: variables.$bs-black-overlay;
         display: flex;
         align-items: center;
+        
     }
     &__heading{
-        @extend .page-header;
+        @extend .page-header--m;
         margin: 0rem;
         color: variables.$white;
+        padding-left: 1rem;
+    }
+}
+
+.about{
+    padding: 1.5rem 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    &__heading{
+        @extend .section-header--m;
+        margin: 0rem;
+        margin-bottom: 1rem;
+    }
+    &__img{
+        width: 100%;
+    }
+    &__quote{
+        @extend .body-copy--m;
+        font-weight: 700;
+        margin-bottom: 0rem;
+    }
+    &__heading__band{
+        @extend .sub-header--m;
+        padding: 1.5rem 0rem 1rem;
+        margin: 0rem;
+    }
+    
+}
+
+.photo-gallery{
+    padding: 1.5rem 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: variables.$alabaster;
+    &__heading{
+        @extend .section-header--m;
+        margin: 0rem 0rem 1rem;
+    }
+    &__container{
+        display: flex;
+        flex-direction: column;
+    }
+    &__img{
+        width: 100%;
+        padding-bottom: 1rem;
     }
 }
 
