--- a/styles/bio.css
+++ b/styles/bio.css
@@ -29,7 +29,7 @@
   line-height: 2.75rem;
   font-weight: 700;
 }
-.section-header--m, .about__heading, .photo-gallery__heading {
+.section-header--m, .about__heading, .photo-gallery__heading, .footer__heading {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
@@ -40,7 +40,7 @@
   line-height: 2rem;
   font-weight: 600;
 }
-.sub-header--m, .about__heading__band, .primary-nav__heading {
+.sub-header--m, .about__heading__band, .primary-nav__heading, .footer .company__heading {
   font-size: 0.875rem;
   line-height: 1.375rem;
   font-weight: 600;
@@ -62,7 +62,7 @@
   line-height: 1.25rem;
   font-weight: 400;
 }
-.footer-copy--m {
+.footer-copy--m, .footer .company__text, .footer .company__email, .footer__text {
   font-size: 0.813rem;
   line-height: 1.125rem;
   font-weight: 400;
@@ -82,6 +82,11 @@
 * {
   box-sizing: border-box;
   font-family: "Avenir";
+}
+
+.logo, .footer__logo {
+  max-width: 7.5rem;
+  max-height: 1.25rem;
 }
 
 .primary-nav {
@@ -126,6 +131,50 @@
 }
 .primary-nav__link:hover {
   border-bottom: 4px solid #FFFFFF;
+}
+
+.footer {
+  background-color: #323232;
+  color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  padding: 1.5rem 1rem;
+}
+.footer__heading {
+  margin: 0;
+}
+.footer__container {
+  display: flex;
+  margin-top: 1.5rem;
+}
+.footer__icon {
+  height: 1.5rem;
+  padding-right: 2rem;
+}
+.footer .company {
+  display: flex;
+  flex-direction: column;
+}
+.footer .company__container {
+  display: flex;
+  flex-direction: column;
+}
+.footer .company__heading {
+  margin: 1.5rem 0rem 0rem;
+}
+.footer .company__text {
+  margin: 1.5rem 0rem 0rem;
+}
+.footer .company__email {
+  text-decoration: none;
+  color: #FFFFFF;
+  margin: 1.5rem 0rem 0rem;
+}
+.footer__logo {
+  margin-top: 3rem;
+}
+.footer__text {
+  margin: 1.5rem 0rem 0rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -187,7 +236,7 @@
 }
 
 .photo-gallery {
-  padding: 1.5rem 1rem 1rem;
+  padding: 1.5rem 1rem 0rem;
   display: flex;
   flex-direction: column;
   background-color: #FAFAFA;
