--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,5 +1,5 @@
 @use "./partials/global";
-@use "./partials/font";
+@use "./partials/font" as fontStyle;
 @use "./partials/variables";
 @use "./partials/media-query" as mediaQuery;
 
@@ -19,7 +19,7 @@
         
     }
     &__heading{
-        @extend .page-header--m;
+        @include fontStyle.page-header(small);
         margin: 0rem;
         color: variables.$white;
         padding-left: 1rem;
@@ -31,7 +31,7 @@
     display: flex;
     flex-direction: column;
     &__heading{
-        @extend .section-header--m;
+        @include fontStyle.section-header(small);
         margin: 0rem;
         margin-bottom: 1rem;
     }
@@ -39,12 +39,12 @@
         width: 100%;
     }
     &__quote{
-        @extend .body-copy--m;
+        @include fontStyle.body-copy(small);
         font-weight: 700;
         margin-bottom: 0rem;
     }
     &__heading__band{
-        @extend .sub-header--m;
+        @include fontStyle.sub-header(small);
         padding: 1.5rem 0rem 1rem;
         margin: 0rem;
     }
@@ -57,7 +57,7 @@
     flex-direction: column;
     background-color: variables.$alabaster;
     &__heading{
-        @extend .section-header--m;
+        @include fontStyle.section-header(small);
         margin: 0rem 0rem 1rem;
     }
     &__container{
@@ -71,7 +71,11 @@
 }
 
 @include mediaQuery.tablet{
-
+    .hero{
+        &__heading{
+            @include fontStyle.page-header(large);
+        }
+    }
 }
 
 @include mediaQuery.desktop{
