--- a/styles/bio.css
+++ b/styles/bio.css
@@ -138,7 +138,7 @@ html, body {
   .primary-nav__list {
     justify-content: space-between;
     align-items: center;
-    width: 20%;
+    width: 10rem;
   }
   .primary-nav__item {
     width: auto;
@@ -146,11 +146,63 @@ html, body {
   .primary-nav__link {
     padding: 1rem 0rem;
   }
+  .footer {
+    padding: 2rem 2rem;
+    position: relative;
+  }
+  .footer__heading {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 700;
+  }
+  .footer__container {
+    position: absolute;
+    top: 5%;
+    right: 41%;
+  }
+  .footer .company {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .footer .company__heading {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    font-weight: 600;
+  }
+  .footer .company__text {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+  }
+  .footer__logo {
+    margin: 0;
+    position: absolute;
+    right: 2rem;
+    top: 14%;
+  }
+  .footer__text {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .primary-nav {
+    padding: 0rem 6rem 0rem;
+  }
+  .footer {
+    padding: 2rem 6rem;
+  }
+  .footer__logo {
+    right: 6rem;
+  }
 }
 .hero {
   background-image: url("../assets/Images/hero-bio.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   margin: 0rem;
   height: 250px;
 }
@@ -186,10 +238,9 @@ html, body {
   width: 100%;
 }
 .about__quote {
-  font-size: 0.813rem;
-  line-height: 1.125rem;
-  font-weight: 400;
-  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 600;
   margin-bottom: 0rem;
 }
 .about__sub-container {
@@ -247,8 +298,16 @@ html, body {
     font-weight: 700;
     margin-top: 3rem;
   }
-  .about__img {
-    width: 100%;
+  .about__quote {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+  }
+  .about__artist {
+    font-size: 0.875rem;
+    line-height: 1.475rem;
+    font-weight: 400;
+    font-weight: 700;
   }
   .about__sub-container {
     flex-direction: row;
@@ -280,5 +339,19 @@ html, body {
   }
   .photo-gallery__img {
     padding: 0;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero {
+    height: 600px;
+  }
+  .hero__heading {
+    padding: 0rem 6rem;
+  }
+  .about {
+    padding: 0rem 6rem;
+  }
+  .photo-gallery {
+    padding: 2rem 6rem;
   }
 }/*# sourceMappingURL=bio.css.map */
