--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -7,6 +7,7 @@
     background-image: url("../assets/Images/hero-bio.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     margin: 0rem;
     height: 250px;
 
@@ -42,8 +43,7 @@
         width: 100%;
     }
     &__quote{
-        @include fontStyle.body-copy(small);
-        font-weight: 700;
+        @include fontStyle.sub-header(small);
         margin-bottom: 0rem;
     }
     &__sub-container{
@@ -94,8 +94,12 @@
             @include fontStyle.section-header(large);
             margin-top: 3rem;
         }
-        &__img{
-            width: 100%;
+        &__quote{
+            @include fontStyle.sub-header(large);
+        }
+        &__artist{
+            @include fontStyle.body-copy(large);
+            font-weight: 700;
         }
         &__sub-container{
             flex-direction: row;
@@ -127,5 +131,16 @@
 }
 
 @include mediaQuery.desktop{
-
+   .hero{
+    height: 600px;
+    &__heading{
+        padding: 0rem 6rem;
+    }
+   }
+   .about{
+    padding: 0rem 6rem;
+   }
+   .photo-gallery{
+    padding: 2rem 6rem;
+   }
 }
