--- a/styles/bio.css
+++ b/styles/bio.css
@@ -33,7 +33,7 @@ html, body {
   color: #FFFFFF;
 }
 .primary-nav__logo {
-  margin: 1rem 0rem;
+  padding: 1rem 0rem 0.5rem;
 }
 .primary-nav__list {
   display: flex;
@@ -71,17 +71,17 @@ html, body {
   color: #FFFFFF;
   display: flex;
   flex-direction: column;
-  padding: 1.5rem 1rem;
+  padding: 0 1rem;
 }
 .footer__heading {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
   margin: 0;
+  padding: 1.5rem 0 1rem;
 }
 .footer__container {
   display: flex;
-  margin-top: 1.5rem;
 }
 .footer__icon {
   height: 1.5rem;
@@ -99,13 +99,14 @@ html, body {
   font-size: 0.875rem;
   line-height: 1.375rem;
   font-weight: 600;
-  margin: 1.5rem 0rem 0rem;
+  margin: 0;
+  padding: 1.5rem 0 1rem;
 }
 .footer .company__text {
   font-size: 0.813rem;
   line-height: 1.125rem;
   font-weight: 400;
-  margin: 1.5rem 0rem 0rem;
+  margin: 0;
 }
 .footer .company__email {
   font-size: 0.813rem;
@@ -113,7 +114,8 @@ html, body {
   font-weight: 400;
   text-decoration: none;
   color: #FFFFFF;
-  margin: 1.5rem 0rem 0rem;
+  margin: 0;
+  padding-top: 1rem;
 }
 .footer__logo {
   margin-top: 3rem;
@@ -122,7 +124,7 @@ html, body {
   font-size: 0.813rem;
   line-height: 1.125rem;
   font-weight: 400;
-  margin: 1.5rem 0rem 0rem;
+  margin: 1.5rem 0rem 1.5rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -223,7 +225,7 @@ html, body {
 }
 
 .about {
-  padding: 1.5rem 1rem 1rem;
+  padding: 0rem 1rem 1rem;
   display: flex;
   flex-direction: column;
 }
@@ -232,7 +234,7 @@ html, body {
   line-height: 2rem;
   font-weight: 700;
   margin: 0rem;
-  margin-bottom: 1rem;
+  padding: 1.5rem 0 1rem;
 }
 .about__img {
   width: 100%;
@@ -241,7 +243,15 @@ html, body {
   font-size: 0.875rem;
   line-height: 1.375rem;
   font-weight: 600;
-  margin-bottom: 0rem;
+  margin: 0;
+  padding: 1rem 0 0;
+}
+.about__artist {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 600;
+  margin: 0;
+  padding-top: 0.5rem;
 }
 .about__sub-container {
   display: flex;
@@ -254,9 +264,18 @@ html, body {
   padding: 1.5rem 0rem 1rem;
   margin: 0rem;
 }
+.about__text {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  margin: 0;
+}
+.about__text--padding {
+  padding-top: 1rem;
+}
 
 .photo-gallery {
-  padding: 1.5rem 1rem 0rem;
+  padding: 0 1rem;
   display: flex;
   flex-direction: column;
   background-color: #FAFAFA;
@@ -265,7 +284,8 @@ html, body {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  margin: 0rem 0rem 1rem;
+  margin: 0;
+  padding: 1.5rem 0 1rem;
 }
 .photo-gallery__container {
   display: flex;
