--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -28,23 +28,26 @@
 }
 
 .about{
-    padding: 1.5rem 1rem 1rem;
+    padding: 0rem 1rem 1rem;
     display: flex;
     flex-direction: column;
-    &__container{
-
-    }
     &__heading{
         @include fontStyle.section-header(small);
         margin: 0rem;
-        margin-bottom: 1rem;
+        padding: 1.5rem 0 1rem;;
     }
     &__img{
         width: 100%;
     }
     &__quote{
         @include fontStyle.sub-header(small);
-        margin-bottom: 0rem;
+        margin: 0;
+        padding: 1rem 0 0;
+    }
+    &__artist{
+        @include fontStyle.sub-header(small);
+        margin: 0;
+        padding-top: 0.5rem;
     }
     &__sub-container{
         display: flex;
@@ -55,17 +58,25 @@
         padding: 1.5rem 0rem 1rem;
         margin: 0rem;
     }
+    &__text{
+        @include fontStyle.body-copy(small);
+        margin: 0;
+        &--padding{
+            padding-top: 1rem;
+        }
+    }
     
 }
 
 .photo-gallery{
-    padding: 1.5rem 1rem 0rem;
+    padding: 0 1rem;
     display: flex;
     flex-direction: column;
     background-color: variables.$alabaster;
     &__heading{
         @include fontStyle.section-header(small);
-        margin: 0rem 0rem 1rem;
+        margin: 0;
+        padding: 1.5rem 0 1rem;
     }
     &__container{
         display: flex;
