--- a/styles/bio.css
+++ b/styles/bio.css
@@ -13,7 +13,8 @@
   src: url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("otf");
   font-weight: 700;
 }
-html, body {
+html,
+body {
   box-sizing: border-box;
   font-family: "Avenir";
   margin: 0;
@@ -40,11 +41,14 @@ html, body {
   list-style: none;
   align-items: center;
   width: 100%;
-  padding: 0rem;
   color: #FFFFFF;
   margin: 0rem;
+  padding: 0;
 }
 .primary-nav__item {
+  font-size: 0.875rem;
+  line-height: 1.475rem;
+  font-weight: 400;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -67,6 +71,7 @@ html, body {
 }
 
 .footer {
+  padding: 0 1rem;
   background-color: #323232;
   color: #FFFFFF;
   display: flex;
@@ -77,15 +82,16 @@ html, body {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  margin: 0;
   padding: 1.5rem 0 1rem;
+  margin: 0;
 }
 .footer__container {
   display: flex;
+  justify-content: space-between;
+  width: 8rem;
 }
 .footer__icon {
   height: 1.5rem;
-  padding-right: 2rem;
 }
 .footer .company {
   display: flex;
@@ -99,8 +105,8 @@ html, body {
   font-size: 0.875rem;
   line-height: 1.375rem;
   font-weight: 600;
-  margin: 0;
   padding: 1.5rem 0 1rem;
+  margin: 0;
 }
 .footer .company__text {
   font-size: 0.813rem;
@@ -118,49 +124,54 @@ html, body {
   padding-top: 1rem;
 }
 .footer__logo {
-  margin-top: 3rem;
+  padding-top: 3rem;
 }
 .footer__text {
   font-size: 0.813rem;
   line-height: 1.125rem;
   font-weight: 400;
-  margin: 1.5rem 0rem 1.5rem;
+  padding: 1.5rem 0 1rem;
+  margin: 0;
+  padding-bottom: 1.5rem;
 }
 
 @media screen and (min-width: 768px) {
   .primary-nav {
+    padding: 0 2.25rem;
     flex-direction: row;
     justify-content: flex-start;
-    padding: 0rem 1.5rem 0rem;
+    align-items: center;
   }
   .primary-nav__logo {
-    margin: 0;
-    margin-right: 4rem;
+    padding: 0;
+    padding-right: 2.25rem;
   }
   .primary-nav__list {
     justify-content: space-between;
     align-items: center;
     width: 10rem;
+    padding-left: 2.25rem;
   }
   .primary-nav__item {
     width: auto;
   }
   .primary-nav__link {
-    padding: 1rem 0rem;
+    padding: 1rem 0;
   }
   .footer {
-    padding: 2rem 2rem;
+    padding: 0 2.25rem;
     position: relative;
   }
   .footer__heading {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 700;
+    padding: 3rem 0 2.25rem;
   }
   .footer__container {
     position: absolute;
-    top: 5%;
-    right: 41%;
+    top: 16%;
+    right: 46%;
   }
   .footer .company {
     flex-direction: row;
@@ -171,33 +182,41 @@ html, body {
     line-height: 1.25rem;
     font-weight: 400;
     font-weight: 600;
+    padding: 0 0 1.5rem 0;
   }
   .footer .company__text {
     font-size: 0.875rem;
     line-height: 1.25rem;
     font-weight: 400;
   }
+  .footer .company__email {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    padding: 1.5rem 0 0;
+  }
   .footer__logo {
-    margin: 0;
+    padding: 0;
     position: absolute;
-    right: 2rem;
-    top: 14%;
+    right: 2.25rem;
+    top: 16%;
   }
   .footer__text {
     font-size: 0.875rem;
     line-height: 1.25rem;
     font-weight: 400;
+    padding: 3rem 0 2.25rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .primary-nav {
-    padding: 0rem 6rem 0rem;
+    padding: 0 7rem;
   }
   .footer {
-    padding: 2rem 6rem;
+    padding: 0 7rem;
   }
   .footer__logo {
-    right: 6rem;
+    right: 7rem;
   }
 }
 .hero {
@@ -225,7 +244,7 @@ html, body {
 }
 
 .about {
-  padding: 0rem 1rem 1rem;
+  padding: 0 1rem;
   display: flex;
   flex-direction: column;
 }
@@ -233,11 +252,16 @@ html, body {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  margin: 0rem;
   padding: 1.5rem 0 1rem;
+  margin: 0rem;
 }
 .about__img {
+  background-image: url("../assets/Images/band.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   width: 100%;
+  height: 350px;
 }
 .about__quote {
   font-size: 0.875rem;
@@ -261,7 +285,7 @@ html, body {
   font-size: 0.875rem;
   line-height: 1.375rem;
   font-weight: 600;
-  padding: 1.5rem 0rem 1rem;
+  padding: 1.5rem 0 1rem;
   margin: 0rem;
 }
 .about__text {
@@ -271,7 +295,7 @@ html, body {
   margin: 0;
 }
 .about__text--padding {
-  padding-top: 1rem;
+  padding: 1rem 0;
 }
 
 .photo-gallery {
@@ -284,8 +308,8 @@ html, body {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  margin: 0;
   padding: 1.5rem 0 1rem;
+  margin: 0;
 }
 .photo-gallery__container {
   display: flex;
@@ -304,19 +328,19 @@ html, body {
     font-size: 3.75rem;
     line-height: 4.25rem;
     font-weight: 700;
-    padding: 0rem 2rem;
+    padding: 0rem 2.25rem;
   }
   .about {
-    padding: 0rem 2rem;
+    padding: 0 2.25rem;
   }
   .about__container {
-    padding: 0rem 4rem;
+    padding: 0 3.5rem 2.25rem;
   }
   .about__heading {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 700;
-    margin-top: 3rem;
+    padding: 3rem 0 2.25rem;
   }
   .about__quote {
     font-size: 1.5rem;
@@ -328,6 +352,7 @@ html, body {
     line-height: 1.475rem;
     font-weight: 400;
     font-weight: 700;
+    padding-top: 0.5rem;
   }
   .about__sub-container {
     flex-direction: row;
@@ -337,20 +362,27 @@ html, body {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 600;
+    padding: 3rem 0 2.25rem;
+    padding-bottom: 1rem;
   }
-  .about__sub-text {
+  .about__text {
     font-size: 0.875rem;
     line-height: 1.475rem;
     font-weight: 400;
     width: 48%;
   }
+  .about__text--padding {
+    padding: 0;
+  }
   .photo-gallery {
-    padding: 2rem 2rem;
+    padding: 0 2.25rem;
+    padding-bottom: 2.25rem;
   }
   .photo-gallery__heading {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 700;
+    padding: 3rem 0 2.25rem;
   }
   .photo-gallery__container {
     display: grid;
@@ -366,12 +398,21 @@ html, body {
     height: 600px;
   }
   .hero__heading {
-    padding: 0rem 6rem;
+    padding: 0rem 7rem;
   }
   .about {
-    padding: 0rem 6rem;
+    width: 888px;
+    margin: auto;
+  }
+  .about__container {
+    padding: 0 5.5rem;
+  }
+  .about__img {
+    height: 500px;
   }
   .photo-gallery {
-    padding: 2rem 6rem;
+    width: 888px;
+    margin: auto;
+    padding-bottom: 2.25rem;
   }
 }/*# sourceMappingURL=bio.css.map */
