--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "Avenir";
-  src: url("../../assets/Font/AvenirNextLTPro-Regular.otf") format("otf");
+  src: url("../../assets/fonts/AvenirNextLTPro-Regular.otf") format("otf");
   font-weight: 400;
 }
 @font-face {
   font-family: "Avenir";
-  src: url("../../assets/Font/AvenirNextLTPro-Demi.otf") format("otf");
+  src: url("../../assets/fonts/AvenirNextLTPro-Demi.otf") format("otf");
   font-weight: 600;
 }
 @font-face {
   font-family: "Avenir";
-  src: url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("otf");
+  src: url("../../assets/fonts/AvenirNextLTPro-Bold.otf") format("otf");
   font-weight: 700;
 }
 html,
@@ -46,8 +46,8 @@ body {
   padding: 0;
 }
 .primary-nav__item {
-  font-size: 0.875rem;
-  line-height: 1.475rem;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
   font-weight: 400;
   width: 100%;
   height: 100%;
@@ -60,11 +60,12 @@ body {
   width: 100%;
   text-decoration: none;
   color: #E1E1E1;
-  padding: 0.5rem 0rem;
+  padding: 0.75rem 0rem;
 }
 .primary-nav__link--active {
   color: #FFFFFF;
   border-bottom: 4px solid #FFFFFF;
+  font-weight: 600;
 }
 .primary-nav__link:hover {
   border-bottom: 4px solid #FFFFFF;
@@ -146,7 +147,9 @@ body {
   }
   .primary-nav__logo {
     padding: 0;
-    padding-right: 2.25rem;
+  }
+  .primary-nav__logo-link {
+    margin-right: 2.25rem;
   }
   .primary-nav__list {
     justify-content: space-between;
@@ -158,7 +161,7 @@ body {
     width: auto;
   }
   .primary-nav__link {
-    padding: 1rem 0;
+    padding: 1.5rem 0;
   }
   .footer__container {
     padding: 0 2.25rem;
@@ -173,7 +176,7 @@ body {
   .footer__icons {
     position: absolute;
     top: 16%;
-    left: 34%;
+    left: 17rem;
   }
   .footer .company {
     flex-direction: row;
@@ -211,23 +214,30 @@ body {
     line-height: 1.25rem;
     font-weight: 400;
     padding: 3rem 0 2.25rem;
+    padding-bottom: 3rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .primary-nav {
     padding: 0 7rem;
   }
+  .primary-nav__list {
+    width: 8rem;
+  }
   .footer__container {
-    width: 888px;
+    width: 1020px;
     margin: auto;
     padding: 0;
   }
   .footer__logo {
     right: 0rem;
   }
+  .footer__icons {
+    left: 15rem;
+  }
 }
 .hero {
-  background-image: url("../assets/Images/hero-bio.jpg");
+  background-image: url("../assets/images/hero-bio.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -263,12 +273,12 @@ body {
   margin: 0rem;
 }
 .about__img {
-  background-image: url("../assets/Images/band.jpg");
+  background-image: url("../assets/images/band.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center bottom;
   width: 100%;
-  height: 350px;
+  height: 200px;
 }
 .about__quote {
   font-size: 0.875rem;
@@ -331,7 +341,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .hero {
-    height: 400px;
+    height: 500px;
   }
   .hero__heading {
     font-size: 3.75rem;
@@ -344,6 +354,9 @@ body {
   }
   .about__container {
     padding: 0 3.5rem 2.25rem;
+  }
+  .about__img {
+    height: 350px;
   }
   .about__heading {
     font-size: 2.25rem;
@@ -414,7 +427,7 @@ body {
     padding: 0rem 7rem;
   }
   .about {
-    width: 888px;
+    width: 1020px;
     margin: auto;
     padding: 0;
     padding-bottom: 2.25rem;
@@ -426,9 +439,15 @@ body {
     height: 500px;
   }
   .photo-gallery__container {
-    width: 888px;
+    width: 1020px;
     margin: auto;
     padding: 0;
     padding-bottom: 2.25rem;
+  }
+  .photo-gallery__img {
+    filter: grayscale(1);
+  }
+  .photo-gallery__img:hover {
+    filter: grayscale(0);
   }
 }/*# sourceMappingURL=bio.css.map */
