--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -4,7 +4,7 @@
 @use "./partials/media-query" as mediaQuery;
 
 .hero{
-    background-image: url("../assets/Images/hero-bio.jpg");
+    background-image: url("../assets/images/hero-bio.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -37,12 +37,12 @@
         margin: 0rem;
     }
     &__img{
-        background-image: url("../assets/Images/band.jpg");
+        background-image: url("../assets/images/band.jpg");
         background-size: cover;
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: center bottom;
         width: 100%;
-        height: 350px;
+        height: 200px;
     }
     &__quote{
         @include style.sub-header(small);
@@ -97,7 +97,7 @@
 
 @include mediaQuery.tablet{
     .hero{
-        height: 400px;
+        height: 500px;
         &__heading{
             @include style.page-header(large);
             padding: 0rem 2.25rem;
@@ -109,6 +109,9 @@
         &__container{
             padding: 0 3.5rem 2.25rem;
             
+        }
+        &__img{
+            height: 350px; 
         }
         &__heading{
             @include style.section-header(large);
@@ -149,9 +152,6 @@
             @include style.header-padding(large);
         }
         &__grid{
-            // display: grid;
-            // grid-template-columns: auto auto auto;
-            // gap: 1.5rem;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
@@ -162,7 +162,6 @@
         &__img{
             width: 31%;
             padding: 0;
-            
         }
     }
 }
@@ -188,6 +187,13 @@
     &__container{
         @include style.section-padding(desktop);
         padding-bottom: 2.25rem;
+    }
+    &__img{
+        //only using hover effect for desktop becuse on mobile and tablet it would always be greyscale unless you touch the image and it would only be colored for the time you have your finger on the image
+        filter: grayscale(1);
+            &:hover{
+                filter: grayscale(0);
+            }
     }
    }
 }
