--- a/styles/bio.css
+++ b/styles/bio.css
@@ -339,6 +339,104 @@ body {
   padding-bottom: 1rem;
 }
 
+.comment {
+  display: flex;
+  flex-direction: column;
+  padding: 0 1rem;
+}
+.comment__heading {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+  padding: 1.5rem 0 1rem;
+  margin: 0;
+}
+.comment__container {
+  display: flex;
+  border-bottom: 1px solid #E1E1E1;
+}
+.comment__avatar {
+  max-width: 36px;
+  max-height: 36px;
+  border-radius: 50%;
+  margin-top: 1rem;
+}
+.comment__form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-left: 1rem;
+}
+.comment__label {
+  color: #AFAFAF;
+  text-transform: uppercase;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  padding-bottom: 4px;
+}
+.comment__input {
+  max-height: 36px;
+  border-radius: 4px;
+  border: 1px solid #E1E1E1;
+  padding: 12px;
+  margin-bottom: 1rem;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  color: black;
+}
+.comment__input::-moz-placeholder {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  color: black;
+  font-family: "Avenir";
+}
+.comment__input::placeholder {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  color: black;
+  font-family: "Avenir";
+}
+.comment__txt-area {
+  border-radius: 4px;
+  border: 1px solid #E1E1E1;
+  padding: 12px;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+.comment__txt-area::-moz-placeholder {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  color: black;
+  font-family: "Avenir";
+}
+.comment__txt-area::placeholder {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  color: black;
+  font-family: "Avenir";
+}
+.comment__button {
+  background-color: #323232;
+  color: #FFFFFF;
+  height: 40px;
+  width: 100%;
+  border: 0;
+  border-radius: 4px;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+.comment__button:hover {
+  background-color: #000000;
+}
+
 @media screen and (min-width: 768px) {
   .hero {
     height: 500px;
