--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -3,6 +3,7 @@
 @use "./partials/variables";
 @use "./partials/media-query" as mediaQuery;
 
+
 .hero{
     background-image: url("../assets/images/hero-bio.jpg");
     background-size: cover;
@@ -92,6 +93,80 @@
     &__img{
         width: 100%;
         padding-bottom: 1rem;
+    }
+}
+.comment{
+    display: flex;
+    flex-direction: column;
+    @include style.section-padding(mobile);
+    //margin-bottom: 1rem;
+    
+    &__heading{
+        @include style.section-header(small);
+        @include style.header-padding(small);
+        margin: 0;
+    }
+    &__container{
+        display: flex;
+        border-bottom: 1px solid variables.$mercury;
+    }
+    &__avatar{
+        max-width: 36px;
+        max-height: 36px;
+        border-radius: 50%;
+        margin-top: 1rem;
+    }
+    &__form{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding-left: 1rem;
+    }
+    &__label{
+        color: variables.$silver;
+        text-transform: uppercase;
+        @include style.body-copy(small);
+        padding-bottom: 4px;
+        
+    }
+    &__input{
+        max-height: 36px;
+        border-radius: 4px;
+        border: 1px solid  variables.$mercury;
+        padding: 12px;
+        margin-bottom: 1rem;
+        @include style.body-copy(small);
+        color: black;
+        &::placeholder{
+            @include style.body-copy(small);
+            color: black;
+            font-family: "Avenir";
+        }
+    }
+    &__txt-area{
+        border-radius: 4px;
+        border: 1px solid  variables.$mercury;
+        padding: 12px;
+        @include style.body-copy(small);
+        margin-bottom: 1rem;
+        &::placeholder{
+            @include style.body-copy(small);
+            color: black;
+            font-family: "Avenir";
+        }
+    }
+    &__button{
+        background-color: variables.$bs-black;
+        color: variables.$white;
+        height: 40px;
+        width: 100%;
+        border: 0;
+        border-radius: 4px;
+        text-transform: uppercase;
+        margin-bottom: 1rem;
+        &:hover{
+            background-color: variables.$bs-black-d;
+        }
     }
 }
 
