--- a/styles/bio.css
+++ b/styles/bio.css
@@ -351,7 +351,7 @@ body {
   padding: 1.5rem 0 1rem;
   margin: 0;
 }
-.comment__container {
+.comment__top {
   display: flex;
   border-bottom: 1px solid #E1E1E1;
 }
@@ -408,6 +408,7 @@ body {
   line-height: 1.125rem;
   font-weight: 400;
   margin-bottom: 1rem;
+  resize: none;
 }
 .comment__txt-area::-moz-placeholder {
   font-size: 0.813rem;
@@ -435,6 +436,56 @@ body {
 }
 .comment__button:hover {
   background-color: #000000;
+}
+.comment__bottom {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1rem;
+}
+.comment__bottom-container {
+  display: flex;
+  flex-direction: row;
+  padding: 1rem 0;
+  border-bottom: 1px solid #E1E1E1;
+}
+.comment__bottom-avatar {
+  width: 36px;
+  height: 36px;
+  background-color: #E1E1E1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 50%;
+}
+.comment__bottom-right {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1rem;
+  width: 100%;
+}
+.comment__bottom-right-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.comment__name {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 600;
+  margin: 0;
+  padding-bottom: 0.5rem;
+}
+.comment__date {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  color: #AFAFAF;
+  margin: 0;
+}
+.comment__text {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  margin: 0;
 }
 
 @media screen and (min-width: 768px) {
