--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -11,11 +11,12 @@
     background-position: center;
     margin: 0rem;
     height: 250px;
+    width: 100%;
 
     &__layer{
         width: 100%;
         height: 100%;
-        background-color: variables.$bs-black-overlay;
+        background-color: variables.$black-overlay;
         display: flex;
         align-items: center;
         
@@ -23,7 +24,7 @@
     &__heading{
         @include style.page-header(small);
         margin: 0rem;
-        color: variables.$white;
+        color: variables.$primary-text-light;
         padding-left: 1rem;
     }
 }
@@ -32,6 +33,7 @@
     @include style.section-padding(mobile);
     display: flex;
     flex-direction: column;
+    color: variables.$primary-bg;
     &__heading{
         @include style.section-header(small);
         @include style.header-padding(small);
@@ -75,7 +77,8 @@
 }
 
 .photo-gallery{
-    background-color: variables.$alabaster;
+    background-color: variables.$light-bg;
+    color: variables.$primary-bg;
     &__container{
         @include style.section-padding(mobile);
         display: flex;
@@ -99,16 +102,19 @@
     display: flex;
     flex-direction: column;
     @include style.section-padding(mobile);
-    //margin-bottom: 1rem;
+    color: variables.$primary-bg;
     
     &__heading{
         @include style.section-header(small);
         @include style.header-padding(small);
         margin: 0;
     }
+    &__container{
+        padding-bottom: 1rem;
+    }
     &__top{
         display: flex;
-        border-bottom: 1px solid variables.$mercury;
+        border-bottom: 1px solid variables.$line-color;
     }
     &__avatar{
         max-width: 36px;
@@ -123,7 +129,7 @@
         padding-left: 1rem;
     }
     &__label{
-        color: variables.$silver;
+        color: variables.$secondary-text;
         text-transform: uppercase;
         @include style.body-copy(small);
         padding-bottom: 4px;
@@ -132,7 +138,7 @@
     &__input{
         max-height: 36px;
         border-radius: 4px;
-        border: 1px solid  variables.$mercury;
+        border: 1px solid  variables.$line-color;
         padding: 12px;
         margin-bottom: 1rem;
         @include style.body-copy(small);
@@ -153,7 +159,7 @@
     }
     &__txt-area{
         border-radius: 4px;
-        border: 1px solid variables.$mercury;
+        border: 1px solid variables.$line-color;
         padding: 12px;
         @include style.body-copy(small);
         margin-bottom: 1rem;
@@ -172,8 +178,8 @@
         }
     }
     &__btn{
-        background-color: variables.$bs-black;
-        color: variables.$white;
+        background-color: variables.$primary-bg;
+        color: variables.$primary-text-light;
         height: 40px;
         width: 100%;
         border: 0;
@@ -181,24 +187,23 @@
         text-transform: uppercase;
         margin-bottom: 1rem;
         &:hover{
-            background-color: variables.$bs-black-d;
+            background-color: variables.$secondary-bg;
         }
         
     }
     &__bottom{
         display: flex;
         flex-direction: column;
-        padding-bottom: 1rem;
         &-container{
             display: flex;
             flex-direction: row;
             padding: 1rem 0;
-            border-bottom: 1px solid variables.$mercury;
+            border-bottom: 1px solid variables.$line-color;
         }
         &-avatar{
             width: 36px;
             height: 36px;
-            background-color: variables.$mercury;
+            background-color: variables.$line-color;
             background-repeat: no-repeat;
             background-size: cover;
             border-radius: 50%;
@@ -222,7 +227,7 @@
     }
     &__date{
         @include style.body-copy(small);
-        color: variables.$silver;
+        color: variables.$secondary-text;
         margin: 0;
     }
     &__text{
@@ -301,6 +306,12 @@
             padding: 0;
         }
     }
+    .comment{
+        @include style.section-padding(tablet);
+        &__container{
+            padding: 0 3.5rem 2.25rem;
+        }
+    }
 }
 
 @include mediaQuery.desktop{
@@ -331,6 +342,12 @@
             &:hover{
                 filter: grayscale(0);
             }
+    }
+   }
+   .comment{
+    @include style.section-padding(desktop);
+    &__container{
+        padding: 0 16rem;
     }
    }
 }
